Introduced virtual threads in CollectionBasedConversationMediator, ActiveMQMessageBus and ReceivedMessageHandler.